--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,9 @@ dependencies {
 
     def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version" // Retrofit with Moshi Converter
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.9.3' // Moshi
 
     def dagger_version = "2.42"
     implementation "com.google.dagger:dagger:$dagger_version"
